# bert-playground

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
.github/workflows/: predict-test.yml
bert_playground/: bert_pretrained_japanese.py  hidden_word_prediction.py
bert_playground.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bert_playground.py
