[tool.poetry]
name = "bert-playground"
version = "0.1.0"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^2.9.1"
torch = "^1.5.0"
torchvision = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
test = "echo test"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
